# devops-pipeline

./: CMakeLists.txt  README.md  workflows
.github/workflows/: main.yml
github/workflows/: ci.yml  gitlab-ci.yml
scripts/: build.sh  coverage.py  lint.sh
src/: main.cpp
tests/: test_main.cpp
